// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <GifExpertApp /> should show list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Pice"
      key="One Pice"
    />
    <GifGrid
      category="Suits"
      key="Suits"
    />
  </ol>
</Fragment>
`;

exports[`Test <GifExpertApp /> show the component correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
